--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://WICKxDEV.github.io",
+  "homepage": "https://WICKxDEV.github.io/Isuru-Wickramasinghe",
   "name": "isuru-wickramasinghe-portfolio",
   "version": "0.1.0",
   "private": true,
